// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parses normal string correctly. 1`] = `
Array [
  "H",
  "e",
  "l",
  "l",
  "o",
  ",",
  " ",
  "t",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "m",
  "y",
  " ",
  "s",
  "t",
  "r",
  "i",
  "n",
  "g",
  ".",
]
`;

exports[`Parses single HTML tag. 1`] = `
Array [
  "H",
  "e",
  "l",
  "l",
  "o",
  ",",
  " ",
  "t",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "s",
  "o",
  "m",
  "e",
  " ",
  Object {
    "attributes": Array [],
    "content": "b",
    "isFirstCharacter": true,
    "tag": "STRONG",
  },
  Object {
    "attributes": Array [],
    "content": "o",
    "isFirstCharacter": false,
    "tag": "STRONG",
  },
  Object {
    "attributes": Array [],
    "content": "l",
    "isFirstCharacter": false,
    "tag": "STRONG",
  },
  Object {
    "attributes": Array [],
    "content": "d",
    "isFirstCharacter": false,
    "tag": "STRONG",
  },
  " ",
  "t",
  "e",
  "x",
  "t",
  ".",
]
`;
